--- a/src/assets/sass/_global.sass
+++ b/src/assets/sass/_global.sass
@@ -22,3 +22,7 @@ body
   font-family: $fontMediumMain
   &.locked
     overflow: hidden
+
+@mixin flex_beetwen
+  display: flex
+  justify-content: space-between
