--- a/src/assets/sass/_global.sass
+++ b/src/assets/sass/_global.sass
@@ -26,3 +26,12 @@ body
 @mixin flex_beetwen
   display: flex
   justify-content: space-between
+
+@mixin asideLeft
+  display: grid
+  justify-content: space-between
+  grid-template-columns: 25% 72%
+@mixin asideRight
+  display: grid
+  justify-content: space-between
+  grid-template-columns: 72% 25%
